# simple-file-transfer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  platform.sh
.github/workflows/: release-dev.yml  release-prod.yml  release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  example.http
backend/src/: main.rs
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm/templates/tests/: test-connection.yaml
ui/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  Uploader.tsx  index.scss  main.css  main.tsx
ui/src/Components/: Notification.module.scss  Notification.tsx  NotificationStack.module.scss  NotificationStack.tsx  Upload.module.scss  Upload.tsx  Uploader.tsx  index.ts
ui/src/Context/: Notification.tsx
ui/src/Requests/: api.ts
ui/src/Utils/: copy.ts
