[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
salvo = "0.64"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
once_cell = { version = "1" }
validator = { version = "0.18", features = ["derive"] }
