[package]
name = "simple-file-transfer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "simple-file-transfer"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
actix-web = "4"
actix-cors = "0"
actix-files = "0"
env_logger = "0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
serde = { version = "1", features = ["derive"], default-features = false }
validator = { version = "0", features = ["derive"], default-features = false }
uuid = { version = "1", features = ["fast-rng", "v4"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0", features = ["serde"] }
confique = "0"
